# ncbi-vdb

./: .gitattributes  .gitignore  CHANGES  CHANGES.md  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  Makefile  Makefile.config  Makefile.config.linux.x86_64  Makefile.userconfig  README  README-blastn  README.md  bin64  ilib64  konfigure.perl  lib64  local-builds.sh  package.perl  package.pm  perl-config.pl  schema  schema_crc.pl  test-bin64  user.status
libs/: CMakeLists.txt  Makefile
libs/align/: .gitignore  CMakeLists.txt  Makefile  al_iterator.c  align-access.c  align_mgr.c  bam-priv.h  bam.c  debug.h  dna-reverse-cmpl.c  pl_iterator.c  quality-quantizer.c  reader-cmn.c  reader-cmn.h  reader-refseq.c  reader-wgs.c  reader-wgs.h  ref_iterator.c  reference-cmn.c  reference-cmn.h  reference-fasta.cpp  reference-fasta.h  reference.c  refseq-mgr-priv.h  refseq-mgr.c  samextract-bam.cpp  samextract-bam.pic.d  samextract-grammar.c  samextract-grammar.dot  samextract-grammar.h  samextract-grammar.output  samextract-grammar.y  samextract-lex.c  samextract-lex.l  samextract-lib.cpp  samextract-lib.pic.d  samextract-pool.c  samextract-pool.h  samextract-tokens.h  samextract.d  (+13 more)
libs/ascp/: CMakeLists.txt  Makefile  ascp-priv.h  ascp.c
libs/axf/: CMakeLists.txt  Makefile  align-local_ref_id.c  align-local_ref_start.c  align-ref-name.c  align-ref-pos.c  align-ref-pos.cpp  align-ref-seq-id.c  align-restore-read.c  cigar.c  generate-mismatch-qual.c  get-sam-flags.c  get_mate_align_ids.c  list.c  list.h  make-cmp-read_desc.c  mismatch-restore-qual.c  not-my-row.c  project_read_from_sequence.c  range-list.c  range-list.h  range-list.hpp  raw-restore-qual.c  raw-restore-read.c  ref-preserve_qual.c  ref-restore-read.c  ref-tbl-sub-select.c  ref-tbl.c  ref-tbl.h  refseq-stats.c  refseq.c  refseq.cpp  refseq.h  refseq.hpp  restore-read.c  restore-read.cpp  restore-read.h  seq-construct-read.c  seq-restore-linkage-group.c  seq-restore-read.c  (+6 more)
libs/blast/: CMakeLists.txt  Makefile  blast-mgr.c  blast-mgr.h  read-id-type.h  reader.c  reader.h  ref-reader.c  reference.c  reference.h  run-set.c  run-set.h
libs/cipher/: .gitignore
libs/cloud/: CMakeLists.txt  Makefile  aws-auth.c  aws-priv.h  aws.c  cloud-cmn.c  cloud-cmn.h  cloud-mgr.c  cloud-priv.h  cloud.c  cloud_manager-singleton.h  gcp-authentication.c  gcp-priv.h  gcp.c
libs/csra2/: Makefile
libs/diagnose/: CMakeLists.txt  Makefile  diagnose.c  diagnose.h  endpoint.c
libs/ext/: CMakeLists.txt  Makefile
libs/hdf5/: .gitignore  CMakeLists.txt  Makefile  hdf5dir.c
libs/jwt/: Makefile  base64-priv.hpp  base64.cpp  eh_alloc.cpp  json-array.cpp  json-exception.cpp  json-object.cpp  json-primitive.cpp  json-priv.hpp  json-value.cpp  json-wrapper.cpp  json.cpp  jwa-ecdsa.cpp  jwa-factory.cpp  jwa-hmac.cpp  jwa-none.cpp  jwa-rsa.cpp  jwk-cmn.cpp  jwk-ec.cpp  jwk-hmac.cpp  jwk-parse.cpp  jwk-rsa.cpp  jws-factory.cpp  jwt-c.cpp  jwt-claims.cpp  jwt-exception.cpp  jwt-factory.cpp  jwt-lock.cpp  jwt-map-impl.hpp  jwt-set-impl.hpp  jwt-string.cpp  jwt-vector-impl.hpp  memset-priv.hpp  memset_s.cpp  parser.cpp  unwind-cxx.h
libs/kapp/: CMakeLists.txt  Makefile  args-conv.c  args.c  args_debug.h  init.c  loader-file.c  loader-meta.c  log-xml.c  main-priv.h  main.c  progressbar.c  queue-file.c  tokenizer.c  vdbapp.c  vdbapp.cpp
libs/kdb/: CMakeLists.txt  ColumnBlob.hpp  Makefile  RColumnBlob.cpp  WColumnBlob.cpp  btree.c  cc-priv.h  cc.h  coldata-priv.h  coldata.c  coldata.h  colfmt-priv.h  colfmt.h  colidx-priv.h  colidx.c  colidx0-priv.h  colidx0.c  colidx1-priv.h  colidx1.c  colidx2-priv.h  colidx2.c  column-base.c  column-base.h  column-cc.c  column-priv.h  column.c  columnblob-base.c  columnblob-base.cpp  columnblob-base.h  columnblob-cmn.c  columnblob-cmn.h  database-base.c  database-base.h  database-cc.c  database-cmn.c  database-cmn.h  database-priv.h  database.c  dbcc-cmn.c  dbmgr-cmn.c  (+141 more)
libs/kdbtext/: CMakeLists.txt  KDBTextScanner.hpp  Makefile  Token.hpp  api-manager.cpp  api.cpp  api.hpp  column.cpp  column.hpp  columnblob.cpp  columnblob.hpp  database.cpp  database.hpp  index.cpp  index.hpp  kdbtext-grammar.hpp  kdbtext-grammar.y  kdbtext-lex.h  kdbtext-lex.l  manager.cpp  manager.hpp  metadata.cpp  metadata.hpp  metanode.cpp  metanode.hpp  path.cpp  path.hpp  table.cpp  table.hpp  zz_kdbtext-grammar.cpp  zz_kdbtext-grammar.hpp  zz_kdbtext-grammar.output  zz_kdbtext-lex.c
libs/kfc/: CMakeLists.txt  Makefile  except.c  refcount.c  rsrc-priv.h  rsrc.c  sysctx-priv.h  test-except.c  tstate.c  vtbl.c  xc.c
libs/kfg/: .gitignore  CMakeLists.txt  Makefile  aws-credentials.c  config-aws.c  config-gcp.c  config-grammar.c  config-grammar.h  config-grammar.y  config-lex.c  config-lex.l  config-tokens.h  config.c  default.kfg  default_kfg.h  docker.c  docker.h  gcp-credentials.c  install-kfg.sh  install.sh  kart.c  keystore.c  kfg-lex.h  kfg-parse.h  kfg-priv.h  kfgsums  ngc-priv.h  ngc.c  properties.c  report-kfg.c  repository.c  zz_config-grammar.c  zz_config-grammar.h
libs/kfs/: CMakeLists.txt  Makefile  appendfile.c  arc-files.h  arc.c  arrayfile.c  buffile-read.c  buffile-write.c  buffile.c  bzip.c  cacheteefile.c  cacheteefile2.c  cacheteefile3.c  cacheteefile_wm.c  cacheteefile_wm_cleanup.c  cacheteefile_wm_mgr.c  callback_file.c  chunk-reader.c  countfile.c  crc32.c  dir_test.c  directory-v2.c  directory.c  extendable-ramfile.c  ffext.c  ffkey.c  ffmagic.c  file-v2.c  file.c  fileformat.c  from_to_namelist.c  gzip.c  impl.h  karc-priv.h  kfs-priv.h  kfsmagic  limitfile.c  lockfile.c  logfile.c  lru_cache.c  (+29 more)
libs/klib/: CMakeLists.txt  Judy.h  Makefile  SHA-32bit.c  SHA-64bit.c  all-vdb-version.c  b+tree.c  base64-priv.h  base64.c  bsearch.c  bstpersist-v2.c  bstpersist.c  btree-page.c  btree-pager.c  btree-priv.h  btree-ram-pager.c  btree-value.c  btree.c  container.c  cp1252.c  crc32.c  data-buffer.c  debug.c  guid.c  hashfile.c  hashtable.c  http-tries.c  (+68 more)
test/: CMakeLists.txt  Makefile  only-remote-repository.kfg
vdb3/: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  Makefile.env  README.md  coding-conventions.txt
(+3065 files in other folders)
