add_library(kdb STATIC
    btree.c
    coldata.c
    colidx.c
    colidx0.c
    colidx1.c
    colidx2.c
    column-cc.c
    column.c
    database-cc.c
    database-cmn.c
    database.c
    dbcc-cmn.c
    dbmgr-cmn.c
    dbmgr.c
    idstats.c
    idxblk.c
    index.c
    kdb.c
    meta.c
    ptrieval-v1.c
    ptrieval-v2.c
    rowset-simple.c
    rowset.c
    table-cc.c
    table.c
    trieidx-v1.c
    trieidx-v2.c
    trieval-v1.c
    trieval-v2.c
    u64idx-v3.c
    wcoldata.c
    wcolidx.c
    wcolidx0.c
    wcolidx1.c
    wcolidx2.c
    wcolumn.c
    wdatabase.c
    wdbmgr.c
    widxblk.c
    windex.c
    wkdb.c
    wmeta.c
    wtable.c
    wtrieidx-v1.c
    wtrieidx-v2.c
    wu64idx-v3.c
)

add_definitions (-D__mod__="libs/kdb")